add tar files support, update readme, extend configuration

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,11 @@
-# Example watched dir (remove comment to unlock):
+[global]
+# How often dirs are checked
+delay = 10
+
+# If it is possible look into compressed files (zip, rar, tar.*)
+digArchives = 1
+
+
+# Here define directories to watch (remove comment to unlock):
 #[$HOME/Downloads]
+#[/media/share/Documents]
