update config file descriptions

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [global]
-# How often dirs are checked
+# How often dirs are checked (seconds)
 delay = 10
 
-# If it is possible look into compressed files (zip, rar, tar.*)
+# Look into compressed zip, rar, tar.* files (0 or 1)
 digArchives = 1
 
 
-# Here define directories to watch (remove comment to unlock):
+# Here define directories to watch (remove comment to unlock)
 #[$HOME/Downloads]
 #[/media/share/Documents]
