beta feature - extract compressed files

--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,9 @@ delay = 10
 # Look into compressed zip, rar, tar.* files (0 or 1)
 digArchives = 1
 
+# After moveing extract compressed zip, rar, tar.* files (0 or 1)
+extractArchives = 1
+
 
 # Here define directories to watch (remove comment to unlock)
 #[$HOME/Downloads]
